--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>AnimeStore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>AnimeStore</name>
-	<description>topic 2-2 activity for CST339</description>
+	<description>Anime Store</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
