--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#AWS Database
-spring.datasource.url=jdbc:mysql://awseb-e-ejm2giguvj-stack-awsebrdsdatabase-pdxgk6xefglf.ckxbfchqev8g.us-west-1.rds.amazonaws.com:3306/ebdb
+#Local MAMP Database
+spring.datasource.url=jdbc:mysql://localhost:8889/animestore
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
